# haskell-socket-test

./: stack.yaml  test-socket.cabal
app/: Main.hs
