name: test-socket
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
author: Anton K

executable test-socket
    main-is: Main.hs
    build-depends:
        base -any,
        async -any,
        bytestring -any,
        random -any,
        socket >=0.8.0.0
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-prof-options: -Wall -O2 -rtsopts -fprof-auto -fprof-cafs
    ghc-options: -rtsopts -O2 -threaded
